 * import-from-file no longer deletes first file.
 * Added new options to import to allow correct importing of migration data.
  
2007-05-29 cjg
 * Added an example to security.pl

2007-05-30 cjg
 * Fixed warning when pagerange met non digit data.

2007-06-05 cjg
 * Fixed bug with "dir" when importing migration data.

2007-06-05 cjg
 * Fixed stray warning when a zero byte file is added to a document.
 * Fixed some problems with importing files with "/" or " " in the title.
    When create_from_data is passed a filename then it is used as-is, but
    checks for things like ../ still.

2007-06-12 cjg
 * Fixed bug in importing eprints which gave them the wrong "dir"
 * Fixed issue when migrating items that un-needed eprintid and userid's
    got created.

2007-06-12 cjg
 * Simplified URL escape method. This fixes an issue with unknown URL schemes.

2007-06-13 cjg
 * Set all primary key fields to be can_clone=>0 (fixing bug introduced in 
    new-version by the wrong dir fix earlier)

2007-06-13 tmb
 * Added some latitude + longitude values to example data

2007-06-15 tmb
 * Fixed bug which caused URLs not to be included in text version of emails

2007-07-02 cjg/tdb
 * close-quote is now a seperating character, rather than mapping to quote.
    this should fix bug #3048

2007-07-02 tdb/cjg
 * #3061 - define STAFF_ONLY as FALSE as well as TRUE, otherwise we can never
    test its falseness
 * #3050 - only attempt to generate a thumbnail if the main file exists
 * #3049 - don't remove content from hidden directories in /documents (i.e. be
    svn friendly)
 * #3037 - if a set has a value of "" then the option will render as 
    UNSPECIFIED unless explicitly defined in a phrase.
 * #3065 - Fixed bug that .txt files never indexed.

2007-07-02 cjg
 * Fixed problem with searching subjects in input forms. #2962

2007-07-20 cjg
 * Added "binmode" to some file opens for Harry.

2007-08-13 cjg
 * Removed unneeded "use" from Utils.pm