@@ -6524,3 +6524,7 @@ PACKAGE: 2.2.99.2
 
 2007-08-13 cjg
  * Removed unneeded "use" from Utils.pm
+
+2007-08-13 cjg
+ * Added experimental (not yet used) method for reading from the beast.
+
